<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VuBusStop</string>
    <string name="button_lokacija">Moja \n lokacija</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="normal">Normal</string>
    <string name="sattelite">Satellite</string>
    <string name="none">None</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="terrain">Terrain</string>
    <string name="current_location">Trenutna lokacija</string>
    <string name="action_settings">Postavke</string>
    <string name="action_search">Traži</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Pomoć</string>
    <string name="action_check_updates">Check for Updates</string>

</resources>
