<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
    android:id="@+id/overflow_ladica"
    android:title="@string/action_settings"
    android:icon="@drawable/ic_drawer"
    android:showAsAction="always">
    <menu>
        <item
        android:id="@+id/mapTypeNormal"
        android:title="@string/normal"/>
    <item
        android:id="@+id/mapTypeSatellite"
        android:title="@string/sattelite"/>
    <item
        android:id="@+id/mapTypeTerrain"
        android:title="@string/terrain"/>
    <item
        android:id="@+id/mapTypeHybrid"
        android:title="@string/hybrid"/>
    </menu>
</item>
    <!-- Search / will display always -->
    <!-- <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom"/> -->
     
    <!-- Location Found -->
    <!-- <item android:id="@+id/action_location_found"
          android:icon="@drawable/ic_action_location_found"
          android:title="@string/action_location_found"
          android:showAsAction="ifRoom" /> -->
     
    <!-- Refresh -->
  <!--   <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh"
          android:showAsAction="ifRoom" /> -->
     
    <!-- Help -->
    <!-- <item android:id="@+id/action_help"
          android:icon="@drawable/ic_action_help"
          android:title="@string/action_help"
          android:showAsAction="never"/> -->
     
    <!-- Check updates -->
    <!-- <item android:id="@+id/action_check_updates"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_check_updates"
          android:showAsAction="never" /> -->
    
    
 
    <item
        android:id="@+id/gotoCurrentLocation"
        android:showAsAction="always"
        android:title="@string/current_location"/>
    
</menu>